--- a/package.json
+++ b/package.json
@@ -1,27 +1,40 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
-  "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "engines": {
-    "node": "12.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+    "name": "discordbotlist",
+    "version": "3.0.0",
+    "description": "A discord bot list.",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "node src/index.js"
+    },
+    "dependencies": {
+        "body-parser": "1.19.0",
+        "canvas": "^2.6.1",
+        "canvas-constructor": "kyranet/CanvasConstructor",
+        "colors": "^1.4.0",
+        "cookie-parser": "^1.4.4",
+        "discord.js": "^12.2.0",
+        "dotenv": "^8.2.0",
+        "ejs": "^3.0.1",
+        "express": "^4.16.3",
+        "is-html": "^2.0.0",
+        "is-url": "1.2.4",
+        "klasa": "^0.5.0",
+        "module-alias": "^2.2.2",
+        "mongoose": "^5.9.10",
+        "node-fetch": "^2.6.0",
+        "node-pre-gyp": "^0.14.0",
+        "showdown": "^1.9.1",
+        "unirest": "^0.6.0"
+    },
+    "engines": {
+        "node": "12.x"
+    },
+    "_moduleAliases": {
+        "@root": ".",
+        "@bot": "./src/bot",
+        "@utils": "./src/utils",
+        "@routes": "./src/routes",
+        "@models": "./src/models",
+        "@structures": "./src/structures"
+    }
 }
