--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dependencies": {
         "body-parser": "1.19.0",
         "canvas": "^2.6.1",
-        "canvas-constructor": "kyranet/CanvasConstructor",
+        "canvas-constructor": "github:kyranet/CanvasConstructor",
         "colors": "^1.4.0",
         "cookie-parser": "^1.4.4",
         "discord.js": "^12.2.0",
@@ -20,6 +20,7 @@
         "is-url": "1.2.4",
         "klasa": "^0.5.0",
         "module-alias": "^2.2.2",
+        "mongodb": "^3.5.9",
         "mongoose": "^5.9.10",
         "node-fetch": "^2.6.0",
         "node-pre-gyp": "^0.14.0",
